// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures-1: Should match all files  1`] = `
{
  "stderr": "",
  "stdout": "!file.js
a.js
b.js",
  "write": [],
}
`;

exports[`fixtures-1: Should match files except \`a.js\`  1`] = `
{
  "stderr": "",
  "stdout": "!file.js
b.js",
  "write": [],
}
`;

exports[`fixtures-2: Should match \`a.js\` and \`!b.js\`  1`] = `
{
  "stderr": "",
  "stdout": "!b.js
a.js",
  "write": [],
}
`;

exports[`fixtures-2: Should match all js files and all supported files in the '!dir.js' directory  1`] = `
{
  "stderr": "",
  "stdout": "!b.js
a.js
!dir.js/1.css
!dir.js/2.css",
  "write": [],
}
`;

exports[`fixtures-2: Should only match \`!b.js\`  1`] = `
{
  "stderr": "",
  "stdout": "!b.js",
  "write": [],
}
`;

exports[`fixtures-3: Should exclude \`.svn\` (existing)  1`] = `
{
  "stderr": "",
  "stdout": "outside.js",
  "write": [],
}
`;

exports[`fixtures-3: Should exclude \`.svn\` (nonexisting)  1`] = `
{
  "stderr": "",
  "stdout": "outside.js",
  "write": [],
}
`;

exports[`fixtures-3: Should match \`outside.js\`, \`dir/inside.js\` and \`dir/node_modules/in-node_modules.js\`  1`] = `
{
  "stderr": "",
  "stdout": "dir/inside.js
dir/node_modules/in-node_modules.js
outside.js",
  "write": [],
}
`;

exports[`fixtures-3: Should only match \`outside.js\` and \`dir/inside.js\`  1`] = `
{
  "stderr": "",
  "stdout": "dir/inside.js
outside.js",
  "write": [],
}
`;

exports[`fixtures-4: Should match \`level-1.js\`  1`] = `
{
  "stderr": "",
  "stdout": "0/level-1.js",
  "write": [],
}
`;

exports[`fixtures-4: Should match \`level-1.js\` #2  1`] = `
{
  "stderr": "",
  "stdout": "0/level-1.js",
  "write": [],
}
`;

exports[`fixtures-4: Should match \`level-1.js\` #3  1`] = `
{
  "stderr": "",
  "stdout": "0/level-1.js",
  "write": [],
}
`;

exports[`should not ignore file paths contains object prototype keys  1`] = `
{
  "stderr": "",
  "stdout": "constructor/should-be-formatted.js",
  "write": [],
}
`;
